compositor_wayland: properly handle moving the cursor plane failing

On test failure, the plane has to be disabled or future atomic tests fail

BUG: 487037